@@ -1,3 +1,11 @@
+2009-10-29  Paul Pluzhnikov  <ppluzhnikov@google.com>
+
+	* configure.ac: New --with-libthread-db option.
+	* thread-db.c: Allow direct dependence on libthread_db.
+	(thread_db_free): Adjust.
+	* config.in: Regenerate.
+	* configure: Likewise.
+	
 2009-10-28  Paul Pluzhnikov  <ppluzhnikov@google.com>
 
 	PR gdb/10757
